# fullstack_GPT_2025_re

./: day1.ipynb  day2.ipynb  day3.ipynb  main.py  pyproject.toml
